@startuml 01_overview
' Generate: plantuml -tsvg -tpng -o architecture/out architecture/diagrams/01_overview.puml

skinparam shadowing false
skinparam roundcorner 12
skinparam handwritten false
skinparam backgroundColor #F4F6F9
skinparam ArrowColor #64748B
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 60

left to right direction

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #CBD5E1
  FontColor #1E293B
  BorderThickness 1
}

skinparam classAbstract {
  BackgroundColor #FFFFFF
  BorderColor #334155
  FontStyle italic
}

skinparam package {
  BackgroundColor #E0F2FE
  BorderColor #0284C7
  FontColor #0F172A
  FontStyle bold
  BorderThickness 1.5
}

skinparam title {
  FontColor #1E293B
  FontSize 16
  FontStyle bold
}

title Wysokopoziomowa architektura silnika

package engine {

  class Engine {
    + run() : int
  }

  class Window
  class InputController

  class "Benchmark & pomiary" as Benchmark #FFFBEB;line:F59E0B;text:92400E {
    pomiar FPS (F5)
    eksport JSON -> measurements/
    animacja kamery po benchmark_path
  }
}

' Klasy współdzielone przez Engine i Renderer - kolumna między pakietami,
' żeby powiązania w obie strony byly krotkie i nie krzyzowaly innych pakietow.
class Camera
class "Scene (CPU)" as SceneCPU #ECFDF5;line:059669;text:064E3B {
  modele, meshe, materialy
}
class DeviceContext {
  Vulkan instance / device
  DeviceConfig zalezny od trybu
}

package renderer #F8FAFC;line:64748B;text:334155 {

  class Renderer {
    - use_raster_ : bool
    + load_scene()
    + set_camera()
    + draw()
    + switch_backend()
  }

  abstract class IRenderBackend {
    + create()
    + destroy()
    + load_scene()
    + update_camera()
    + record()
  }

  abstract class SceneGpuBuilderBase {
    + build() : ScenePayload
  }

  class ScenePayload {
    + backend : BackendKind
    + type-erased GPU data
  }
}

Engine *-- Window
Engine *-- Camera
Engine *-- InputController
Engine *-- SceneCPU
Engine *-- DeviceContext
Engine *-- Benchmark
Engine o-- Renderer

Renderer o--> IRenderBackend
Renderer ..> SceneCPU
Renderer ..> Camera
Renderer ..> DeviceContext

SceneGpuBuilderBase ..> ScenePayload
IRenderBackend ..> ScenePayload
Renderer ..> SceneGpuBuilderBase

@enduml
